--- a/deny.toml
+++ b/deny.toml
@@ -7,4 +7,4 @@ vulnerability = "deny"
 unmaintained = "deny"
 yanked = "deny"
 notice = "warn"
-ignore = ["RUSTSEC-2020-0056"]
+ignore = ["RUSTSEC-2020-0056", "RUSTSEC-2020-0071"]
